--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="utf-8">
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
@@ -30,14 +30,14 @@
           <div class="collapsible-header"><i class="material-icons">whatshot</i>Framtid</div>
           <div class="collapsible-body"><img class="responsive-img" id="img-future"><p id="future"></p>
             <div class="container"><i class="material-icons">thumb_down</i><i class="material-icons">thumb_up</i>
-            </div>
+            </div>   
           </div>
         </li>
       </ul>
     </div>
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
+      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
       <script type="text/javascript" src="script.js"></script>
     </body>
   </html>
